Fixed text alignment on mobile

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -85,6 +85,7 @@ div#activities {
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        text-align: center;
         padding: 24px 32px 64px 32px;
     
         min-width: 40vw;
